--- a/DeWPF/DeWPF.csproj
+++ b/DeWPF/DeWPF.csproj
@@ -97,6 +97,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="UMLJeuDes.cd" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
